--- a/index.html
+++ b/index.html
@@ -2,28 +2,26 @@
 <html>
  <head>
    <title>ericmumo</title>
-  <!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+   <link rel="stylesheet" href="main.css">
  </head>
  <body>
    <nav>
      <ol>
-       <li><a href=”/”>Home</a></li>
+       <li><a href=”/home”>Home</a></li>
+       <p>i am eric mumo</p>
+       <p>studied diploma in ICT</p>
        <li><a href=”/about”>About</a></li>
        <li><a href=”/resume”>Resume</a></li>
        <li><a href=”/blog”>Blog</a></li>
      </ol>
    </nav>
    <div class=”container”>
-     <div class=”blurb”>
-       <h1>Hi, I am eric mumo</h1>
-       <p></persued diploma in ICT</p>
+     <p class=”blu 
      </div>
    </div>
-   <footer>
    <ul>
      <li><a href=”mailto:mumoeric19@gmail.com”</a></li>
    </ul>
-   </footer>
+   
  </body>
 </html>
