--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
    <nav>
      <ol>
        <li><a href=”/home”>Home</a></li>
-       <p>i am eric mumo</p>
-       <p>studied diploma in ICT</p>
+       <p>i am eric mumo <br>studied diploma in ICT</p>
        <li><a href=”/about”>About</a></li>
        <li><a href=”/resume”>Resume</a></li>
        <li><a href=”/blog”>Blog</a></li>
@@ -20,8 +19,7 @@
      </div>
    </div>
    <ul>
-     <li><a href=”mailto:mumoeric19@gmail.com”</a></li>
-   </ul>
+     <li><a href=”mailto:youremail”>mumoeric19@gmail.com</a>
    
- </body>
-</html>
+ </li>
+</ul>
