--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
-<html>
- <head>
-   <title>ericmumo</title>
-   <link rel="stylesheet" href="main.css">
- </head>
- <body>
-   <nav>
-     <ol>
-       <li><a href=”/home”>Home</a></li>
-       <p>i am eric mumo <br>studied diploma in ICT</p>
-       <li><a href=”/about”>About</a></li>
-       <li><a href=”/resume”>Resume</a></li>
-       <li><a href=”/blog”>Blog</a></li>
-     </ol>
-   </nav>
-   <div class=”container”>
-     <p class=”blu 
-     </div>
-   </div>
-   <ul>
-     <li><a href=”mailto:youremail”>mumoeric19@gmail.com</a>
-   
- </li>
-</ul>
+<html lang="en">
+  <hea>
+    <meta charset="utf-8">
+    <head name="viewport"content="width=device-width, initial="1.0">
+    <title>ERIC MUMO_ICT</title>
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body>
+    <div class="container>
+      <header>
+        <h1>ERIC MUMO</h1>
+        <p class="subtitle">ict tech enthuasit</p>
+      </header>
+<nav>
+  <ul>
+    <li><a href="#about">About</a></li>
+  <li><a href="#skills">skills</a></li>
+  <li><a href="#projects">projects</a></li>
+  <li><a href="#contacts">contacts</a></li>
+  </ul>
+  </nav>
+
+  
+<main>
+  <section id="about">
+    <h2>About me</h2>
+    <p>passionate ict enthuasit exploring the depths of technology and cybersecurity.curently pursuing my diploma in information communication  technology. </p>
+  </section>
+  
+  <section id="skills">
+    <h2>Technical skills</h2>
+    <ul>
+      <li>Network Security</li>
+      <li>programming</li>
+      <li>System Administration</li>
+      <li>Software Development</li>
+      <li>Database Management</li>
+      <li>cybersecurity</li>
+       </ul>
+       </section>
+</main>
+
+
+<footer>
+  <p>&copy;2025 ERIC MUMO.All rights reserved.</p>
+</footer>
+</div>
+</body>
+</html>
