--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   </head>
   <body>
     <div class="container>
+
       <header>
-        <h1>ERIC MUMO</h1>
+        <h1 class="glitch">ERIC MUMO</h1>
         <p class="subtitle">ict tech enthuasit</p>
       </header>
 <nav>
   <ul>
-    <li><a href="#about">About</a></li>
+    <li><a href="#home">About</a></li>
   <li><a href="#skills">skills</a></li>
   <li><a href="#projects">projects</a></li>
   <li><a href="#contacts">contacts</a></li>
@@ -23,7 +24,7 @@
 
   
 <main>
-  <section id="about">
+  <section id="home">
     <h2>About me</h2>
     <p>passionate ict enthuasit exploring the depths of technology and cybersecurity.curently pursuing my diploma in information communication  technology. </p>
   </section>
