--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <hea>
     <meta charset="utf-8">
     <head name="viewport"content="width=device-width, initial="1.0">
+      <image src="C:\Users\user\Documents\GitHub\ericmumo.com\image\Black and Blue Initials Creative Logo.png" alt="logo">
+      </image>
+      </image>
     <title>ERIC MUMO_ICT</title>
     <link rel="stylesheet" href="main.css">
   </head>
