--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <hea>
     <meta charset="utf-8">
-    <head name="viewport"content="width=device-width, initial="1.0">
-      <image src="C:\Users\user\Documents\GitHub\ericmumo.com\image\Black and Blue Initials Creative Logo.png" alt="logo">
-      </image>
-      </image>
+    <meta name="viewport"content="width=device-width, initial="1.0">
+      <img src="./image/Black Gold Elegant Bird Club Logo.png" alt="logo" width="500" height="300">
+
     <title>ERIC MUMO_ICT</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+  </body>
     <div class="container>
 
       <header>
@@ -21,9 +21,10 @@
     <li><a href="#home">About</a></li>
   <li><a href="#skills">skills</a></li>
   <li><a href="#projects">projects</a></li>
+  <img src="image/Black and Blue Initials creative logo.png"alt="project" width="600" height="200">
   <li><a href="#contacts">contacts</a></li>
-  </ul>
-  </nav>
+  </img>
+  </img>
 
   
 <main>
@@ -51,4 +52,4 @@
 </footer>
 </div>
 </body>
-</html>
+</img>
