--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <li><a href="#home">About</a></li>
   <li><a href="#skills">skills</a></li>
   <li><a href="#projects">projects</a></li>
-  <img src="image/Black and Blue Initials creative logo.png"alt="project" width="600" height="200">
+  <img src="./image/Black and Blue Initials creative logo.png"alt="project" width="600" height="200">
   <li><a href="#contacts">contacts</a></li>
   </img>
   </img>
