--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <hea>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport"content="width=device-width, initial="1.0">
       <img src="./image/Black Gold Elegant Bird Club Logo.png" alt="logo" width="300" height="300">
