--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-  </body>
-    <div class="container>
-
+  </body
+    <div class="container">
       <header>
         <h1 class="glitch">ERIC MUMO</h1>
         <p class="subtitle">ict tech enthuasit</p>
@@ -23,6 +22,7 @@
   <li><a href="#projects">projects</a></li>
   <li><a href="#contacts">contacts</a></li>
   </ul>
+</nav>
 
   
 <main>
