--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <main>
   <section id="home">
     <h2>About me</h2>
-    <p>passionate ict enthuasit exploring the depths of technology and cybersecurity.curently pursuing my diploma in information communication  technology. </p>
+    <p>passionate ict enthuasit exploring the depths of technology and cybersecurity.Curently pursuing my diploma in information communication  technology. </p>
   </section>
   
   <section id="skills">
@@ -49,4 +49,3 @@
   <p>&copy;2025 ERIC MUMO.All rights reserved.</p>
 </footer>
 </div>
-</img>
