--- a/portfoilo.html
+++ b/portfoilo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eric Mumo - Portfolio</title>
+    <img src="./image/Black Gold Elegant Bird Club Logo.png" alt="logo" width="600" height="600" center>
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
