--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </nav>
 
   
-<main>
+<sid="contacts">
   <section id="home">
     <h2>About me</h2>
-    <p>passionate ict enthuasit exploring the depths of technology and cybersecurity.Curently pursuing my diploma in information communication  technology. </p>
+    <p>passionate ict enthuasit exploring the depths of technology and cybersecurity<br>Curently pursuing my diploma in information communication  technology. </p>
   </section>
   
   <section id="skills">
@@ -41,6 +41,14 @@
       <li>Database Management</li>
       <li>cybersecurity</li>
        </ul>
+       </section>
+
+
+       <section id="contacts">
+        <h2>> Contact_Me:</h2>
+            <a href="mailto:eric.mumoeric19@gmail.com" class="btn">Email</a>
+            <a href="https://github.com/mumotech" class="btn">GitHub</a>
+            <a href="www.linkedin.com/in/eric-mumo-37a160314" class="btn">LinkedIn</a>
        </section>
 </main>
 
