--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
        </ul>
        </section>
 
+       <br>
 
        <section id="contacts">
         <h2>> Contact_Me:</h2>
             <a href="mailto:eric.mumoeric19@gmail.com" class="btn">Email</a>
             <a href="https://github.com/mumotech" class="btn">GitHub</a>
-            <a href="www.linkedin.com/in/eric-mumo-37a160314" class="btn">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/eric-mumo-37a160314" class="btn">linkedin</a>
        </section>
 </main>
 
