--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport"content="width=device-width, initial="1.0">
       <img src="./image/Black Gold Elegant Bird Club Logo.png" alt="logo" width="300" height="300">
-
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1956913047473002"
+      crossorigin="anonymous"></script>
     <title>ERIC MUMO_ICT</title>
     <link rel="stylesheet" href="main.css">
   </head>
