--- a/index.html
+++ b/index.html
@@ -1,64 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport"content="width=device-width, initial="1.0">
-      <img src="./image/Black Gold Elegant Bird Club Logo.png" alt="logo" width="300" height="300">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1956913047473002"
-      crossorigin="anonymous"></script>
-    <title>ERIC MUMO_ICT</title>
+    <title>ERIC MUMO-HOME</title>
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
-  </body
-    <div class="container">
-      <header>
-        <h1 class="glitch">ERIC MUMO</h1>
-        <p class="subtitle">ict tech enthuasit</p>
-      </header>
-<nav>
-  <ul>
-    <li><a href="#home">About</a></li>
-  <li><a href="#skills">skills</a></li>
-  <li><a href="#projects">projects</a></li>
-  <li><a href="#contacts">contacts</a></li>
-  </ul>
-</nav>
-
-  
-<sid="contacts">
-  <section id="home">
-    <h2>About me</h2>
-    <p>passionate ict enthuasit exploring the depths of technology and cybersecurity<br>Curently pursuing my diploma in information communication  technology. </p>
-  </section>
-  
-  <section id="skills">
-    <h2>Technical skills</h2>
+<body>
+  <nav>
     <ul>
-      <li>Network Security</li>
-      <li>programming</li>
-      <li>System Administration</li>
-      <li>Software Development</li>
-      <li>Database Management</li>
-      <li>cybersecurity</li>
-       </ul>
-       </section>
-
-       <br>
-
-       <section id="contacts">
-        <h2>Contact_Me:</h2>
-        <ol>
-          <a href="mailto:eric.mumoeric19@gmail.com" class="btn">Email</a>
-            <a href="https://github.com/mumotech" class="btn">GitHub</a>
-            <a href="https://www.linkedin.com/in/eric-mumo-37a160314" class="btn">linkedin</a>
-        </ol>
-            
-       </section>
-</main>
-
-
-<footer>
-  <p>&copy;2025 ERIC MUMO.All rights reserved.</p>
-</footer>
-</div>
+      <li><a href="index.html">About</a></li>
+      <li><a href="skills.html">skills</a></li>
+      <li><a href="contacts.html">contacts</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1 class="glitch" data-text="ERIC MUMO">ERIC MUMO</h1></h1>
+    <h1>ERIC MUMO an ICT professiional </h1>
+        <div class="intro">
+          <img src="image/Black Gold Elegant Bird Club Logo.png" alt ="logo image">
+          <p>hello!am eric mumo, a pasionate ICT preffosional ready to serve you</p>
+          </div>
+  </main>
+  <div class="hacker-mask"></div>
+</body>
+ </h1<>
