--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </nav>
   <main>
     <h1 class="glitch" data-text="ERIC MUMO">ERIC MUMO</h1></h1>
-    <h1>ERIC MUMO an ICT professiional </h1>
+    <h1>ERIC MUMO an ICT professional </h1>
         <div class="intro">
           <img src="image/Black Gold Elegant Bird Club Logo.png" alt ="logo image">
-          <p>hello!am eric mumo, a pasionate ICT preffosional ready to serve you</p>
+          <p>hello!am eric mumo, a pasionate ICT professional ready to serve you</p>
           </div>
   </main>
   <div class="hacker-mask"></div>
