--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <h1>ERIC MUMO an ICT professional </h1>
         <div class="intro">
           <img src="image/Black Gold Elegant Bird Club Logo.png" alt ="logo image">
-          <p>hello!am eric mumo, a pasionate ICT professional ready to serve you</p>
-          </div>
+          <p>hello!am eric mumo, a pasionate ICT professional <br> a student at railway training institute<br>hardoworking<br>Passionate ICT enthusiast exploring the depths of technology and cybersecurity<br>pursing diplöma in INFORMATION AND COMMUNICATION TECHNOLOGY</p>
+          </br<>
   </main>
   <div class="hacker-mask"></div>
 </body>
