--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <li><a href="index.html">About</a></li>
       <li><a href="skills.html">skills</a></li>
       <li><a href="contacts.html">contacts</a></li>
-    </ul>
+      <li><a href="admin.html">admin</a></li>
+    </a<>
   </nav>
   <main>
     <h1 class="glitch" data-text="ERIC MUMO">ERIC MUMO</h1></h1>
