--- a/skills.html
+++ b/skills.html
@@ -12,6 +12,7 @@
                <li><a href="index.html">About</a></li>
                <li><a href="skills.html">skills</a></li>
                <li><a href="contacts.html">contacts</a></li>
+               <li><a href="admin.html">admin</a></li>
             </ul>
         </nav>
         <main>
