--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
                 </form>
             </div>
             <ul>
-                <a href="mailto:ericmumo@gmail.com" class="btn">EMAIL ME</a>
+                <a href="mailto:ericmumo19@gmail.com" class="btn">EMAIL ME</a>
                 <a href="https://github.com/mumotech" class="btn">Github</a>
                 <a href="https://www.linkedin.com/in/eric-mumo-37a160314" class="btn">LinkedIn</a>
             </ul>
