--- a/contacts.html
+++ b/contacts.html
@@ -19,9 +19,8 @@
             <h1 class="glitch" data-text="contact me">contact me</h1></h1>
             <div class="contact-form">
                 <form>
-                    <input type="text" placeholder="YOUR NAME" required>
-                    <input type="email" placeholder="YOUR EMAIL" required>
-                    <textarea placeholder="YOUR MESSAGE" required></textarea>
+                    <input type="text" placeholder="full names" required>
+                    <input type="email" placeholder="YOUR EMAIL" required>                 <textarea placeholder="YOUR MESSAGE" required></textarea>
                     <button type="submit">send message</button>
                 </form>
             </div>
