--- a/skills.html
+++ b/skills.html
@@ -20,19 +20,19 @@
             <div class="skill">
                 <h3>web development</h3>
                 <div class="progress-bar">
-                    <div class="progress" style="width: 90%"></div>
+                    <div class="progress" style="width: 9%3"></div>
                 </div>
             </div>
             <div class="skill">
                 <h3>cybersecurity</h3>
                 <div class="progress-bar">
-                    <div class="progress" style="width: 80%"></div>
+                    <div class="progress" style="width: 95%"></div>
                 </div>
             </div>
             <div class="skill">
                 <h3>programming</h3>
                 <div class="progress-bar">
-                    <div class="progress" style="width: 80%"></div>
+                    <div class="progress" style="width: 94%"></div>
                 </div>
             </div>   
         </main>
